# movement-sim

./: .gitignore  CMakeLists.txt  README.md  munich.json  test_map.json
.github/workflows/: ci.yml
cmake/: FindRenderDoc.cmake  copy_shader_file.cmake  gcc_analyze.cmake  glib-resource-compiler.cmake  vulkan_shader_compiler.cmake
docker/: Dockerfile
hardware_stats/: .clang-tidy  CMakeLists.txt
hardware_stats/src/: main.cpp  plot.py
map/: README.md  generate_map.py
shader_validation/: CMakeLists.txt
shader_validation/cmake/: gcc_analyze.cmake
shader_validation/src/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  main.cpp
src/logger/: CMakeLists.txt  Logger.cpp  Logger.hpp
src/sim/: CMakeLists.txt  Entity.cpp  Entity.hpp  GpuQuadTree.cpp  GpuQuadTree.hpp  Map.cpp  Map.hpp  PushConsts.cpp  PushConsts.hpp  Simulator.cpp  Simulator.hpp  TickData.cpp  TickData.hpp
src/sim/quadtree/: Box.h  CMakeLists.txt  Quadtree.h  Vector2.h
src/sim/shader/: CMakeLists.txt  fall.comp  random_move.comp  random_move_struct.comp  random_move_vec.comp
src/sim/shader/utils/: CMakeLists.txt  Utils.cpp  Utils.hpp
src/sim/shaders/: CMakeLists.txt  random_move.comp
src/ui/: CMakeLists.txt  UiContext.cpp  UiContext.hpp
src/ui/resources/: CMakeLists.txt  entity_draw.frag  person.frag  person.geom  person.vert  screen_square.frag  screen_square.geom  screen_square.vert  triangle.frag  triangle.geom  triangle.vert  ui_resources.c.xml
src/ui/resources/shader/blur/: blur.frag  blur.geom  blur.vert
src/ui/resources/shader/entity/: entity.frag  entity.geom  entity.vert
src/ui/resources/shader/map/: map.frag  map.geom  map.vert
src/ui/resources/shader/person/: person.vert
src/ui/resources/shader/quadTreeGrid/: quadTreeGrid.frag  quadTreeGrid.vert
src/ui/resources/shader/screen_square/: screen_square.frag  screen_square.geom
src/ui/widgets/: CMakeLists.txt  SimulationOverlayWidget.cpp  SimulationOverlayWidget.hpp  SimulationSettingsBarWidget.cpp  SimulationSettingsBarWidget.hpp  SimulationWidget.cpp  SimulationWidget.hpp
src/ui/widgets/opengl/: AbstractGlObject.cpp  AbstractGlObject.hpp  BlurGlObject.cpp  BlurGlObject.hpp  CMakeLists.txt  EntityGlObject.cpp  EntityGlObject.hpp  MapGlObject.cpp  MapGlObject.hpp  QuadTreeGridGlObject.cpp  QuadTreeGridGlObject.hpp  ScreenSquareGlObject.cpp  ScreenSquareGlObject.hpp
src/ui/widgets/opengl/fb/: AbstractGlFrameBuffer.cpp  AbstractGlFrameBuffer.hpp  CMakeLists.txt  EntitiesFrameBuffer.cpp  EntitiesFrameBuffer.hpp  MapFrameBuffer.cpp  MapFrameBuffer.hpp  QuadTreeGridFrameBuffer.cpp  QuadTreeGridFrameBuffer.hpp
src/ui/widgets/opengl/utils/: CMakeLists.txt  Utils.hpp
src/ui/widgets/shader/: CMakeLists.txt  entity_draw.frag
src/ui/windows/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp
src/utils/: CMakeLists.txt  TickDurationHistory.cpp  TickDurationHistory.hpp  TickRate.cpp  TickRate.hpp
