cmake_minimum_required(VERSION 3.16)

set(LOGGER_SOURCES Logger.cpp
                   Logger.hpp)

add_library(logger OBJECT ${LOGGER_SOURCES})
target_link_libraries(logger PUBLIC spdlog::spdlog)

if(${MOVEMENT_SIMULATOR_LOG_LEVEL} STREQUAL Trace)
    set (MOVEMENT_SIMULATOR_LOG_LEVEL TRACE)
    message(STATUS "Using log level Trace")
elseif(${MOVEMENT_SIMULATOR_LOG_LEVEL} STREQUAL Debug)
    set (MOVEMENT_SIMULATOR_LOG_LEVEL DEBUG)
    message(STATUS "Using log level Debug")
elseif(${MOVEMENT_SIMULATOR_LOG_LEVEL} STREQUAL Info)
    set (MOVEMENT_SIMULATOR_LOG_LEVEL INFO)
    message(STATUS "Using log level Info")
elseif(${MOVEMENT_SIMULATOR_LOG_LEVEL} STREQUAL Warn)
    set (MOVEMENT_SIMULATOR_LOG_LEVEL WARN)
    message(STATUS "Using log level Warn")
elseif(${MOVEMENT_SIMULATOR_LOG_LEVEL} STREQUAL Error)
    set (MOVEMENT_SIMULATOR_LOG_LEVEL ERROR)
    message(STATUS "Using log level Error")
elseif(${MOVEMENT_SIMULATOR_LOG_LEVEL} STREQUAL Critical)
    set (MOVEMENT_SIMULATOR_LOG_LEVEL CRITICAL)
    message(STATUS "Using log level Critical")
elseif(${MOVEMENT_SIMULATOR_LOG_LEVEL} STREQUAL Off)
    set (MOVEMENT_SIMULATOR_LOG_LEVEL OFF)
    message(STATUS "Using log level Off")
else()
    if((NOT ${MOVEMENT_SIMULATOR_LOG_LEVEL} STREQUAL Default) AND (NOT MOVEMENT_SIMULATOR_LOG_LEVEL STREQUAL ""))
        message(WARNING "Log level '${MOVEMENT_SIMULATOR_LOG_LEVEL}' unknown, use -DMOVEMENT_SIMULATOR_LOG_LEVEL=[Trace, Debug, Info, Warn, Error, Critical, Off, Default]")
    endif()
    set (MOVEMENT_SIMULATOR_LOG_LEVEL $<IF:$<CONFIG:Debug>,DEBUG,INFO>)
    message(STATUS "Setting MOVEMENT_SIMULATOR_LOG_LEVEL to according to build type")
endif()

target_compile_definitions(logger INTERFACE SPDLOG_ACTIVE_LEVEL=SPDMOVEMENT_SIMULATOR_LOG_LEVEL_${MOVEMENT_SIMULATOR_LOG_LEVEL})
